[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/WinMenu.gd" type="Script" id=1]
[ext_resource path="res://Music/09 Emily.mp3" type="AudioStream" id=2]

[node name="WinMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="WinMenuContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -79.0
margin_right = -34.0
margin_bottom = -17.0
rect_scale = Vector2( 2.64, 2.72 )

[node name="Label" type="Label" parent="WinMenuContainer"]
margin_right = 64.0
margin_bottom = 14.0
text = "Try Again?"

[node name="MenuButton" type="Button" parent="WinMenuContainer"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 38.0
text = "Menu"

[node name="RetryButton" type="Button" parent="WinMenuContainer"]
visible = false
margin_top = 42.0
margin_right = 56.0
margin_bottom = 62.0
text = "Retry"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 3.0
autoplay = true

[connection signal="pressed" from="WinMenuContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="WinMenuContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
